[package]
name = "client"
version = "0.1.0"
authors = ["jakearmendariz"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stopwatch = "0.0.7"
openssl = "0.10"
openssl-sys = "0.9"
lazy_static = "1.4.0"
threadpool = "1.8.1"
clap = "2.33.3"

[dependencies.url]
git = "https://github.com/servo/rust-url"